--- a/src/Epistle/appsettings.json
+++ b/src/Epistle/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DocumentDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "Epistle",
+    "ObjectsCollectionName": "objects"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
