--- a/src/Epistle/Epistle.csproj
+++ b/src/Epistle/Epistle.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Epistle.ActivityPub" Version="0.0.0-alpha.1.g63f321f19a" />
+    <PackageReference Include="Epistle.ActivityPub" Version="0.0.0-alpha.2.g837419907a" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
   </ItemGroup>
 
