--- a/src/Epistle/Epistle.csproj
+++ b/src/Epistle/Epistle.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -7,8 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
     <PackageReference Include="Epistle.ActivityPub" Version="0.0.0-alpha.2.g837419907a" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Epistle.Theme.Default\Epistle.Theme.Default.csproj" />
+    <ProjectReference Include="..\Epistle.Domain\Epistle.Domain.csproj" />
+  </ItemGroup>
 </Project>
