split up mongodb repository and service

--- a/src/Epistle/appsettings.json
+++ b/src/Epistle/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "DocumentDatabase": {
+  "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "Epistle",
-    "ObjectsCollectionName": "objects"
+    "Database": "Epistle"
   },
+  "Theme": "Epistle.Theme.Default",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
