--- a/src/Epistle/Epistle.csproj
+++ b/src/Epistle/Epistle.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
-    <PackageReference Include="Epistle.ActivityPub" Version="0.0.0-alpha.2.g837419907a" />
+    <PackageReference Include="Epistle.ActivityPub" Version="0.0.0-alpha.3.g78b9c5e77f" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
   </ItemGroup>
 
