move theme assembly names into appsettings

--- a/src/Epistle/appsettings.json
+++ b/src/Epistle/appsettings.json
@@ -3,7 +3,12 @@
     "ConnectionString": "mongodb://localhost:27017",
     "Database": "Epistle"
   },
-  "Theme": "Epistle.Theme.Default",
+  "Themes": {
+    "Assemblies": [
+      "Epistle.Theme.Default"
+    ],
+    "Selected": "Default"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
